--- a/style.css
+++ b/style.css
@@ -79,12 +79,10 @@ nav {
 
 .home {
   height: 100%;
-  z-index: 2;
   width: 80% !important;
 
   & p {
     width: 55%;
-    padding: 1rem 1rem;
   }
 
   & img {
@@ -94,7 +92,6 @@ nav {
     width: 50%;
     height: 80%;
     filter: drop-shadow(5px 5px 160px #666666) blur(0.2px);
-    /* drop-shadow(5px 5px 10px #666666); */
     z-index: -1;
   }
 
@@ -318,7 +315,7 @@ nav {
   }
 }
 
-/* * *_______________________ [END-OF] RESUME SECTION  ______________________* * */
+/* !_______________________ RESUME SECTION  ______________________* * */
 
 
 /* * RESPONSIVE ELEMENTS -----------------------------------*/
@@ -329,18 +326,25 @@ nav {
     cursor: pointer;
   }
 
+  .home {
+    & img {
+      /* filter: none; */
+    }
+  }
+
   .nav-links {
     position: absolute;
     right: 0;
-    top: 8vh;
-    height: 92vh;
+    top: 0;
+    height: -webkit-fill-available;
     width: 100%;
+    /* z-index: 4; */
+
+    background-color: #212121;
 
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-
-    background-color: black;
     transform: translateX(100%);
   }
 
